# asr

./: .gitignore  README.md
asr/: .dockerignore  Dockerfile  README.md  asr_api.py  cv-decode.py  main.py  pyproject.toml  requirements.txt  transcriber.py
deployment-design/: .env.sample  docker-compose.yml
deployment-design/elastic-backend/: README.md  cv-index.py  pyproject.toml  requirements.txt
deployment-design/elastic-backend/data/: cv-valid-dev.csv
deployment-design/search-ui/search-ui/: .env.sample  Dockerfile  README.md  package-lock.json  package.json
deployment-design/search-ui/search-ui/app/: page.tsx
