[project]
name = "asr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [ # versions that work with macos and linux
    "fastapi[standard]>=0.115.8",
    "soundfile>=0.13.1",
    "torch>=2.1.0, <2.2.0",
    "torchaudio>=2.1.0, <2.2.0",
    "transformers>=4.48.0",
    "numpy<2.0.0",
    "aiohttp>=3.11.13",
    "pandas>=2.2.3",
]

# versions that work with linux
# dependencies = [
#     "fastapi[standard]>=0.115.8",
#     "soundfile>=0.13.1",
#     "torch==2.5.1",
#     "torchaudio>=2.5.1",
#     "transformers>=4.48.0",
# ]
